--- a/arc.css
+++ b/arc.css
@@ -7,3 +7,92 @@
     font-weight: 400;
     font-style: normal;
 }
+
+
+/* shared styles */
+
+.display-flex{
+    display: flex;
+}
+
+
+.text-gray{
+    color:#424242 ;
+}
+
+.text-light-gray{
+    color: #727272;
+}
+
+.btn-primary{
+    background-color: #FF900E;
+    border-radius: 8px;
+    color: white;
+    padding: 20px 25px;
+    font-weight: 600;
+    font-size: 1.25rem;
+    border-style: none;
+}
+
+
+
+/* header styles */
+
+.bg-color{
+    background-color:rgba(255, 144, 14, 0.1) ;
+}
+
+
+/* navbar styles */     
+
+.navbar  {
+    justify-content: space-between;
+    align-items:center ;
+
+}
+
+
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+
+.nav-links{
+    text-decoration: none;
+    font-weight:600;
+
+}
+
+
+.navbar, .banner{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* banner styles */
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;  
+    margin-bottom: 50px;
+    
+}
+
+
+.banner-title{
+font-size: 4em;
+font-weight: 700;
+}
+
+.banner-img{
+    width: 100%;
+}
+
+
+/* Responsive media query */    
+
+@media screen and (max-width:576px){
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+}
