--- a/arc.css
+++ b/arc.css
@@ -24,6 +24,16 @@
     color: #727272;
 }
 
+
+.text-lighter-gray{
+    color: #727272 ;
+}
+
+.text-orange{
+    color: #FF900E;
+}
+
+
 .btn-primary{
     background-color: #FF900E;
     border-radius: 8px;
@@ -33,6 +43,19 @@
     font-size: 1.25rem;
     border-style: none;
 }
+
+
+main{
+    max-width:1440px;
+    margin: 0 auto;
+
+}
+
+
+main > section{
+    margin: 130px;
+}
+
 
 
 
@@ -89,10 +112,57 @@ font-weight: 700;
 }
 
 
-/* Responsive media query */    
+
+/* 2nd page */
+.teams{
+    align-items: center;
+}
+
+
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+
+}
+
+.feature-content{
+    font-size: 2.8rem;
+}
+/* Responsive media query small device */    
 
 @media screen and (max-width:576px){
-    .navbar, .nav-links{
+    .navbar, 
+    .nav-links,
+    .teams{
         flex-direction: column;
     }
+
+    .teams-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    .our-features{
+        margin-left: 20px;
+    }
+}
+
+
+/* Responsive media query medium device */
+
+@media screen and (min-width:577px) and (max-width:992px) {
+
+    .teams{
+        flex-direction: column;
+    }
+
+.our-features{
+   margin: 60px auto;
+}
+    
 }
